[package]
name = "libs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
# rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }
# num-bigint = "0.4.3"
# num-traits = "0.2.14"